--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -2,7 +2,7 @@
 {% load get_metadata_values get_attribute_value from ndf_tags %}
 
 
-{% block title %}GStudio - Course Creator{% endblock %}
+{% block title %} {{title}} {% endblock %}
 {% block body_content %}
     <div class="row create_unit">
         <div class="small-12 columns">
