--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -63,10 +63,11 @@
                     &nbsp;
                         &#8226;
                         &nbsp;
+                    {% comment %}
                     <div style="display: inline-block;">
-
                         {% include "ndf/widget_analytics_views.html" %}
                     </div>
+                    {% endcomment %}
                 </div>
             </div>
         </div>
