striptags added for asset listing.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -27,7 +27,7 @@
             </div>
             <div class="asset_text">
                 <div class="asset_title">{{each.name|truncatechars:35}}</div>
-                <div class="asset_desc">{{each.content|truncatechars:35}}</div>
+                <div class="asset_desc">{{each.content|striptags|truncatechars:35}}</div>
             </div>
         </div>
     </div>
