--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
@@ -1,4 +1,4 @@
-{% load ndf_tags %}
+ {% load ndf_tags %}
 {% load i18n %}
 
 {% block head %}
@@ -133,7 +133,7 @@
             }
             // collapse_tree(node);
             var nav_list = parent_arr.reverse();
-            if(node['node_type']!="CourseSectionEvent" && node['node_type']!="CourseSubSectionEvent" && node['node_type']!="CourseUnitEvent" && node['node_type']!="CourseSection" && node['node_type']!="CourseSubSection" && node['node_type']!="CourseUnit" && update_url){
+            if(node['node_type']!="CourseSectionEvent" && node['node_type']!="CourseSubSectionEvent" && node['node_type']!="CourseUnitEvent" && node['node_type']!="CourseSection" && node['node_type']!="CourseSubSection" && node['node_type']!="CourseUnit" && update_url && node['node_type'] != "CourseEventGroup"){
             // alert(nav_list);
             // alert("node_type");
             $.ajax({
