--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -11,7 +11,7 @@
 {{block.super}}
 <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js"></script>
-  
+
 {% endblock %}
 {% block body_content %}
 {% get_group_object groupid as group_object %}
@@ -35,13 +35,13 @@
                             <a href="{% url 'unit_edit' groupid group_object.pk %}" class="fi-pencil"> Edit</a>
                         </li>
                         <li>
-                            <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}"  class="fi-torsos"> Manage Users</a> 
-                            <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;"> 
+                            <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}"  class="fi-torsos"> Manage Users</a>
+                            <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;">
                                 <div id="group_drawer">
                                 {% include "ndf/widget_user_search.html" with subscription_status=True %}
                                 </div>
                                 <a class="close-reveal-modal">&#215;</a>
-                            </div>          
+                            </div>
                         </li>
                         <li>
                             <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}?cnode_id={{group_id}}" class="fi-volume"> Announce</a>
@@ -67,14 +67,14 @@
                             <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
                         </li>
                         <li >
-                            <a href="https://103.36.84.149/oat/#/" target="_blank" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
+                            <a href="https://clix-authoring.mit.edu/#/" target="_blank" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
                         <li >
                             <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
-                        
+
 <!--                         <li>
                             <a href="#group_overview" class="selected">Overview</a>
                         </li><li>
@@ -150,7 +150,7 @@
         </div>
     </div>
     <script type="text/javascript">
-        
+
         $(function(){
             /*Group sections tabs*/
             // $('.group_sections_content >div').hide();
@@ -176,7 +176,7 @@
             })
         });
 
-        
+
             $( ".createAsset" ).click(function() {
                     var asset_id = $(this).attr('data-asset_id');
                     $.ajax({
@@ -195,6 +195,6 @@
             });
 
     </script>
-    
+
 
 {% endblock body_content %}
