--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -620,7 +620,7 @@
 #toggler07 ~ .transcript,
 #toggler08 ~ .transcript,
 #toggler09 ~ .transcript  {
-  height: 0;
+  height: 100%;
   padding: 0 0 10px !important;
   border-bottom: 2px solid #ddd;
   opacity: 0;
