--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -888,9 +888,13 @@ ul.horizontal_tabs_gstudio {
 .preview_asset {
     background: #ccc;
     border: 2px solid #999;
-    width: 99%;
+    width: 485px;
     min-height: 350px;
-    margin-left: 28.8px;
+    margin-left: 14px;
+}
+
+h6{
+    margin-left:15px;
 }
 
 /*Custom css*/
@@ -905,6 +909,7 @@ ul.horizontal_tabs_gstudio {
 
 input.trans-sub[type="text"], input.trans-sub[type="file"] {
     margin-top: 5px;
+    margin-left: 20px;
 }
 
 
@@ -926,11 +931,12 @@ input.trans-sub[type="file"]:before {
     color: #cc7769;
     border-color: #cc7769;
     float: right;
+    margin-left: 20px;
 }
 input.trans-sub[type="file"] {
     padding: 5px;
     margin-top: 10px;
-    margin-left: 0px;
+    margin-left: 20px;
     border-radius: 4px;
     border: 1px solid #ccc;
     width: 98%;
@@ -948,6 +954,7 @@ label {
     text-transform: uppercase;
     color: #99aaba;
     margin-bottom: 7px;
+    margin-left: 20px;
 }
 
 
@@ -985,7 +992,18 @@ input[type="button"] {
     margin-top:15px;
     width:8%;
 }
+.select-language{
+    display: block;
+    border: 1px solid #999;
+    border-radius: 5px;
+    margin-left: 20px;
+    width: 457px;
+    border-radius: 4px solid #cc7769;
+    height: 47px;
+    border-color: #cc7769;
 
+
+}
 .name-desc-asset-cont-area{
     width:95%;
     margin-left: 24px;
@@ -1055,6 +1073,7 @@ input[type="button"] {
     border-radius: 4px;
     margin-right: 20px;
     margin-bottom: 8px;
+    margin-top: 8px;
     &:hover{
         background-color:rgba(206,120,105,0.2);
         color: $primary-orange;
@@ -1098,10 +1117,33 @@ input[type="button"] {
 }
 
 
+.asset-unit-button {
+    color: $primary-orange;
+    padding: 7px 14px;
+    border-radius: 8px;
+    background:#fff ;
+    border: 1px solid #ce7869;
+    font-size: 12px;
+    font-family: "Rubik-Medium", serif;
+    margin-right: 30px;
+    margin-bottom: 8px;
+    margin-top: 300px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    font-weight: 500;
+    float: right;
+    &:hover{
+        background-color:rgba(206,120,105,0.2);
+        color: $primary-orange;
+    }
+}
+
 .asset-save-button {
     color: $primary-orange;
     display: inline-block;
-    border: 1px solid #999;
+    border: 1px solid #ce7869;;
     border-radius: 5px;
     padding: 8px 10px;
     outline: none;
