--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -29,7 +29,7 @@
 			{% get_relation_value video_obj.pk 'has_transcript' as transcript_rel %}
 			{% if transcript_rel %}
 
-		<form class="trans-form"><input align="right" id="toggler" type="checkbox" /><label class="toggle-me" for="toggler">Transcript</label><img alt="" class="arrow-toggle" src="../Images/chevron-right.svg" />
+		<form class="trans-form"><input align="right" id="toggler" type="checkbox" /><label class="toggle-me" for="toggler">Transcript</label><img alt="" class="arrow-toggle" />
 		<div class="transcript">
 			<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:100%; height:100%">
 			</object>
