save button fixed for activity sheets

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -32,7 +32,7 @@
             {% if editor_view %}
             <input type="hidden" name="return_url" value="{{return_url}}">
             {% endif %}
-            <input type="submit" class="orange-button" class="saveActivityPage" value="Save">
+            <input type="button" class="orange-button" class="saveActivityPage" value="Save">
             <input type="button" class="orange-button cancel-page-create" value="Cancel">
         </div>
     </form>
