--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -85,11 +85,15 @@
             </form>
         </div>
 
+
                     
                         <!--<button asset-save-button type="button" class ="right orange-button save-asset" id="" value="Save"/>-->
                        <!-- <li><input type="submit" name="save" value="Save" class="save-unit"></li>-->
-       <input type="submit" class ="asset-unit-button" id="save_unit" value="Save"/>
+    <div class="row">
+       <button type="button" class ="right asset-unit-button" id="save_unit">Save</button>
     </div>
+
+</div>
 
                        
                     
