earth rotation url added in jhapp plugin

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -20,14 +20,18 @@
                 <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_ost" >Insert Open Story Tool</button>
                 </div>
-                <div style="width: 55%" class="app_desc">
+                <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_policequad" >Insert PoliceQuad</button>
                 </div>
-                <div style="width: 55%" class="app_desc">
+                <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_biomechanic" >Insert BioMechanic</button>
                 </div>
-                <div style="width: 55%" class="app_desc">
+                <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_turtle" >Insert TurtleJS</button>
+                </div>
+
+                <div style="width: 90%" class="app_desc">
+                    <button type="button"  class="right orange-button" id="insert_earth_rotation" >Insert Motion of the Earth</button>
                 </div>
             </div>
 </div>
